// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResponsiveSection should be rendered 1`] = `
.c0 {
  position: relative;
  margin: 0px auto;
}

@media screen and (min-width:1142px) {
  .c0 {
    width: 1040px;
    height: auto;
  }
}

@media screen and (max-width:1141px) {
  .c0 {
    width: 360px;
    height: auto;
  }
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`ResponsiveSection should be rendered with children 1`] = `
.c0 {
  position: relative;
  margin: 0px auto;
}

@media screen and (min-width:1142px) {
  .c0 {
    width: 1040px;
    height: auto;
  }
}

@media screen and (max-width:1141px) {
  .c0 {
    width: 360px;
    height: auto;
  }
}

<div>
  <div
    class="c0"
  >
    <div>
      Example
    </div>
  </div>
</div>
`;
